# fuel-web

./: .bashrc  .bowerrc  .gitignore  .gitreview  0001-tmp.patch  CONTRIBUTING.rst  HACKING.rst  MAINTAINERS  README.md  bower.json  build_docs.sh  config.mk  dummy.txt  groups  nailgun.xml  netcheck.py  product  project.config  requirements-eggs.txt  requirements-rpm.txt  run_tests.sh  tox.ini
fuel_agent/: .testr.conf  openstack-common.conf  requirements-deb.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
fuel_agent/cloud-init-templates/: boothook_centos.jinja2  boothook_ubuntu.jinja2  cloud_config_centos.jinja2  cloud_config_ubuntu.jinja2  meta-data_centos.jinja2  meta-data_ubuntu.jinja2
fuel_agent/draft/: try.py  try.template
fuel_agent/etc/fuel-agent/: fuel-agent.conf.sample
fuel_agent/fuel_agent/: disk_utils.py  errors.py  hardware_utils.py  manager.py  partition.py  provision.py  utils.py  version.py
fuel_agent/fuel_agent/cmd/: agent.py  bootloader.py  configdrive.py  copyimage.py  partition.py  provision.py
fuel_agent/fuel_agent/drivers/: base.py  ks_space_ceph.sample  ks_spaces.py  ks_spaces_plain.sample  ks_spaces_validator.py  nailgun.py  prepare_nocloud.py  read_file.py
fuel_agent/fuel_agent/objects/: __init__.py  base.py  bootloader.py  configdrive.py  device.py  image.py  kernels.py  os.py  partition.py  repo.py
fuel_agent/fuel_agent/tests/: base.py  disk_utils.py  test_artifact_utils.py  test_build_utils.py  test_cmd.py  test_configdrive.py  test_disk_utils.py  test_fs_utils.py  test_grub_utils.py  test_hardware_utils.py  test_image.py  test_img_utils.py  test_ks_spaces_validator.py  test_lvm_utils.py  test_manager.py  test_md_utils.py  test_nailgun.py  (+7 more)
fuel_agent_ci/: .testr.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
fuel_agent_ci/draft/: provision_data.json  provision_data2.json  try_data.py  try_http.py  try_libvirt.py  try_meta.py  try_partial.py
fuel_agent_ci/fuel_agent_ci/: manager.py  utils.py
fuel_agent_ci/samples/: ci_environment.yaml  ks_spaces_ceph.json  provision.json
fuel_upgrade_system/fuel_package_updates/: MANIFEST.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
fuelclient/: MANIFEST.in  fuel  fuel.old  new_fuel.py  python-fuelclient  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
fuelclient/commands/: graph.py
fuelclient/fuelclient/: __init__.py  client.py  consts.py  fuelclient_settings.py  fuelclient_settings.yaml  logs.py  main.py  profiler.py  utils.py
fuelclient/tests/: __init__.py  base.py  test_client.py  test_commands.py  test_env_commands.py  test_load.py  utils.py
fuelclient/v1/: graph.py  node.py
fuelmenu/: MAINTAINERS  MANIFEST.in  README  fuelmenu.py  loader.py  naily.facts.default  requirements.txt  run_tests.sh  settings.py  settings.yaml  setup.cfg  setup.py  test-requirements.txt  tox.ini
fuelmenu/common/: dialog.py  nailyfactersettings.py  network.py  puppet.py  replace.py  urwidwrapper.py
fuelmenu/fuelmenu/: __init__.py  dnsmasq.upstream  fuelmenu.py  naily.facts  naily.facts.default  network  settings.py  settings.yaml
fuelmenu/fuelmenu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fuelmenu/modules/: cobbler.py  cobblerconf.py  dnsandhostname.py  interfaces.py  mirrors.py  shell.py  welcome.py
fuelmenu/specs/: fuelmenu.spec
nailgun/: .eslintrc  .jscsrc  .jshintrc  Gruntfile.js  MANIFEST.in  README.rst  bower.json  build.js  conftest.py  cycle.sh  extensions.xml  gulpfile.js  karma.conf.js  karma.config.js  manage.py  nailgun.xml  npm-shrinkwrap.json  openstack-common.conf  package.json  prepare_fake_env.sh  requirements.txt  run_tests.sh  run_ui_func_tests.sh  setup.cfg  setup.py  static  test-requirements-py27.txt  test-requirements.txt  tox.ini  webpack.config.js
nailgun/docs/: Makefile  api_doc.rst  common_conf.py  conf.py  index.rst
nailgun/fuel-cli/: fuel
nailgun/grunt/: i18n-vk.js  i18n.js  jsxhint.js  trim-static.js
nailgun/gulp/: gulp-rjs.js  i18n.js
nailgun/nailgun/: __init__.py  app.py  autoapidoc.py  config.py  consts.py  db.py  hooks.py  keystonedb.py  logger.py  notifier.py  service_locator.py  settings.py  settings.yaml  unit_test.py  urls.py  version.py  wsgi.py
nailgun/static/: .eslintrc  app.js  backbone-lodash-monkeypatch.js  backbone_view_wrapper.jsx  bootstrap.less  component_mixins.js  component_mixins.jsx  config.js  config_expression.jison  dispatcher.js  expression.js  i18n.js  index.html  keystone_client.js  livereload.js  main.js  models.js  parser.js  syntax.jison  ui_tests  utils.js  view_mixins.js
nailgun/test_run/: test.yaml
nailgun/tests/: tests_one.js
nailgun/tools/: env.sh  env_functions.sh  prepare_database.sh  prepare_settings_yaml.sh
nailgun/tpsql/: __init__.py
nailgun/ui_tests/: helpers.js  intern.js  test_cluster_logs.js  test_cluster_network.js  test_cluster_nodes.js  test_cluster_settings.js  test_cluster_stop_reset_deployment.js  test_cluster_vmware.js  test_clusters.js  test_login_logout.js  test_node_disk.js
nailgun/wsgi/: nailgun_wsgi
network_checker/: AUTHORS  CONTRIBUTING.rst  ChangeLog  Dockerfile  MANIFEST.in  Makefile  Vagrantfile  conftest.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
network_checker/common/: base_app.py
network_checker/debian/: control  rules
network_checker/dhcp_checker/: api.py  commands.py  utils.py
network_checker/fuel_network_checker/: base_app.py
network_checker/net_check/: api.py
network_checker/network_checker/: api.py  cli.py  config.py  config.yaml  consts.py  daemon.py  mcollective_action.py  server.py  xmlrpc.py
network_checker/specs/: nailgun-net-check.spec
network_checker/url_access_checker/: api.py  cli.py  commands.py  errors.py  network.py  utils.py
shotgun/: .coveragerc  .testr.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
shotgun/shotgun/: cli.py  config.py  driver.py  logger.py  manager.py  settings.py  utils.py
shotgun/specs/: shotgun.spec
(+2070 files in other folders)
