[metadata]
name = fuel-agent
version = 6.0.0
author = Mirantis
author-email = fuel-dev@lists.launchpad.net
summary = Fuel agent
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fuel_agent

[entry_points]
console_scripts =
    provision = fuel_agent.cmd.agent:provision
    partition = fuel_agent.cmd.agent:partition
    configdrive = fuel_agent.cmd.agent:configdrive
    copyimage = fuel_agent.cmd.agent:copyimage
    bootloader = fuel_agent.cmd.agent:bootloader

fuel_agent.drivers =
    nailgun = fuel_agent.drivers.nailgun:Nailgun

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
