[metadata]
name = fuel-agent
version = 7.0.0
author = Mirantis
author-email = fuel-dev@lists.launchpad.net
summary = Fuel agent
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fuel_agent

[entry_points]
console_scripts =
    # TODO(kozhukalov): rename entry point
    provision = fuel_agent.cmd.agent:provision
    fa_partition = fuel_agent.cmd.agent:partition
    fa_configdrive = fuel_agent.cmd.agent:configdrive
    fa_copyimage = fuel_agent.cmd.agent:copyimage
    fa_bootloader = fuel_agent.cmd.agent:bootloader
    fa_build_image = fuel_agent.cmd.agent:build_image

fuel_agent.drivers =
    nailgun = fuel_agent.drivers.nailgun:Nailgun
    nailgun_simple = fuel_agent.drivers.nailgun:NailgunSimpleDriver
    nailgun_build_image = fuel_agent.drivers.nailgun:NailgunBuildImage

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
