[metadata]
name = fuelclient
version = 0.2
author = Mirantis Inc.
author-email = fuel-dev@lists.launchpad.net
summary = Command line interface for Nailgun
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    fuelclient

[entry_points]
console_scripts =
    fuel = fuelclient.cli.parser:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
