[metadata]
name = fuelmenu
version = 0.1
author = Mirantis Inc.
author-email = fuel-dev@lists.launchpad.net
summary = Console util for pre-configuration of Fuel server
classifier =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Console :: Curses
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Security
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: Proxy Servers
    Topic :: Software Development :: Testing

[files]
packages =
    fuelmenu

[entry_points]
console_scripts =
    fuelmenu = fuelmenu.fuelmenu:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
