[metadata]
name = nailgun
version = 8.0.0
summary = Provides REST API and Web UI for Fuel
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com

include_package_data = True
zip_safe = False
scripts =
    manage.py
description-file =
    README.rst
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[files]
packages =
    nailgun

data_files =
    share/nailgun/static = static/*

[entry_points]
console_scripts =
    nailgun_syncdb = nailgun.db:syncdb
    nailgun_fixtures = nailgun.db.sqlalchemy.fixman:upload_fixtures
    nailgund = nailgun.app:appstart
    assassind = nailgun.assassin.assassind:run
    receiverd = nailgun.rpc.receiverd:run
    statsenderd = nailgun.statistics.statsenderd:run
    oswl_collectord = nailgun.statistics.oswl.collector:run
    oswl_cleaner = nailgun.statistics.oswl.helpers:delete_expired_oswl_entries

[global]
setup-hooks =
    pbr.hooks.setup_hook
    nailgun.hooks.setup_hook

[wheel]
python-tag = py2
