[metadata]
name = nailgun
version = 10.0.0
author = OpenStack Community
author_email = openstack-dev@lists.openstack.org
summary = Nailgun package
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[files]
packages =
    nailgun

[entry_points]
console_scripts =
    nailgun_syncdb = nailgun.db:syncdb
    nailgun_fixtures = nailgun.db.sqlalchemy.fixman:upload_fixtures
    nailgund = nailgun.app:appstart
    assassind = nailgun.assassin.assassind:run
    receiverd = nailgun.rpc.receiverd:run
    statsenderd = nailgun.statistics.statsenderd:run
    oswl_collectord = nailgun.statistics.oswl.collector:run
    oswl_cleaner = nailgun.statistics.oswl.helpers:delete_expired_oswl_entries
nailgun.extensions =
    cluster_upgrade = nailgun.extensions.cluster_upgrade.extension:ClusterUpgradeExtension
    volume_manager = nailgun.extensions.volume_manager.extension:VolumeManagerExtension
    network_manager = nailgun.extensions.network_manager.extension:NetworkManagerExtension

[pbr]
autodoc_index_modules = True
# this variable is needed to avoid including files
# from other subprojects in this repository
skip_git_sdist = True

[global]
setup-hooks =
    pbr.hooks.setup_hook
    nailgun.hooks.setup_hook

[flake8]
# NOTE(eli): H304 is "No relative imports" error, relative
# imports are required for extensions which can be moved
# from nailgun directory to different place
ignore = H234,H302,H802,H304
exclude = .venv,.git,.tox,dist,doc,*lib/python*,*egg,build,tools,__init__.py,docs
show-pep8 = True
show-source = True
count = True

[build_sphinx]
all_files = 1
build-dir = ../doc/build
source-dir = ../docs

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
