[metadata]
name = nailgun-net-check
summary = Nailgun Network Checker
version = 8.0.17
author = OpenStack
author-email = openstack-dev@lists.openstack.org
maintainer = Dmitry Pyzhov
maintainer-email = dpyzhov@mirantis.com
home-page = http://www.openstack.org/
project-url: Repository, https://github.com/openstack/fuel-web/tree/master/network_checker
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    dhcp_checker
    network_checker

[entry_points]
console_scripts =
    net_probe.py = network_checker.net_check.api:main
    fuel-netcheck = network_checker.cli:main
    dhcpcheck = dhcp_checker.cli:main
    urlaccesscheck = url_access_checker.cli:main

dhcp.check =
    discover = dhcp_checker.commands:ListDhcpServers
    request = dhcp_checker.commands:ListDhcpAssignment
    vlans = dhcp_checker.commands:DhcpWithVlansCheck

network_checker =
    multicast = network_checker.multicast.api:MulticastChecker
    simple = network_checker.tests.simple:SimpleChecker

urlaccesscheck =
    check = url_access_checker.commands:CheckUrls
    with_setup = url_access_checker.commands:CheckUrlsWithSetup
