[metadata]
name = Shotgun
version = 0.1.0
author = Mirantis
author-email = fuel-dev@lists.launchpad.net
summary = Shotgun is diagnostic snapshot generator
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[files]
packages =
    shotgun

[entry_points]
console_scripts =
    shotgun = shotgun.cli:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
