[metadata]
name = fuel-package-updates
version = 6.1.0
summary = Package updates downloader for Fuel Master node
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
classifier =
    Topic :: System :: Software Distribution
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
keywords =
    fuel
    update
    mirantis

[files]
packages =
    fuel_package_updates

[entry_points]
console_scripts =
    fuel-package-updates=fuel_package_updates.main:main
